@@ -3,3 +3,4 @@ method of quickly determining that some symbols do not have a binding
 in an environment.  Removes the "last symbold not found" facility,
 which should be largely superceded by this change.
 
+Fixed bug: a <- as.integer(NA); e <- new.env(size=a); print(a)
